# QAUserSearch

./: .dockerignore  .env.example  .gitignore  AGENTS.md  PROJECT.md  README.md  alembic.ini  main.py  opencode.json  pyproject.toml
.github/agents/: copilot-instructions.md  pr-automation.agent.md
.github/hooks/: hooks.json
.github/prompts/: create-pr.prompt.md
.github/workflows/: ci.yml
.opencode/: package.json  worktree.jsonc
.opencode/command/: fast-spec.analyze.md  fast-spec.clarify.md  fast-spec.md  fast-spec.plan.md  fast-spec.specify.md  fast-spec.tasks.md
.opencode/plugins/: pre-commit-hook.ts  python-validation.ts  test-runner.ts
.opencode/skills/: fast-spec
.ralph/: ralph-history.json  ralph-loop.state.json  ralph-tasks.md
.specify/memory/: constitution.md
alembic/: env.py
alembic/versions/: 32df100854bb_create_external_sources_and_column_.py  595468d0b331_create_audit_logs_table.py
catalog/: catalog.yaml
catalog/schema/: source.schema.json
docker/: Dockerfile  docker-compose.yml
docs/: architecture.md
docs/context/: card_status_bloqueios.md
docs/logs/: diff-closed-invoice-to-invoice.md
docs/plans/: 02P-catalog-ai-enrichment.md  03P-cli-chat.md  04-qa-plan-interpret-endpoint.md  README.md  catalog-ai-enrichment.md  cli-chat.md  fast-spec.md  qa-plan-interpret-endpoint.md
res/db/: credit.invoice.json
scripts/: setup-local.sh  setup.sh  start.sh  validate-python.sh  validate-tests.sh
specs/001-external-schema-extraction/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-llm-query-interpreter/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-project-foundation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-yaml-catalog/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-cli-shared-ui/: plan.md  reference.md  spec.md  tasks.md
specs/004-catalog-ai-enrichment/: plan.md  spec.md  tasks.md
specs/005-cli-chat/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: config.py  main.py
src/cli/: __init__.py  catalog.py  main.py
src/config/: __init__.py  agents.yaml  config.py  tasks.yaml
src/core/: database.py  logging.py
src/dependencies/: catalog.py
src/models/: audit_log.py
src/repositories/: __init__.py
src/schemas/: catalog.py  catalog_yaml.py  enums.py  health.py  interpreter.py  root.py  websocket.py
src/services/: catalog_file_writer.py  catalog_service.py  catalog_validator.py  catalog_yaml_extractor.py  health_service.py
tests/: conftest.py
tests/contract/: test_catalog_api_contract.py  test_catalog_contracts.py  test_catalog_json_schema.py
tests/integration/: test_catalog_yaml_flow.py  (+2 more)
(+90 files in other folders)
